fixed the gap issue of navbar

--- a/src/components/MainNavbar/MainNavbar.css
+++ b/src/components/MainNavbar/MainNavbar.css
@@ -1,9 +1,9 @@
 #mainNavbar {
   display: flex;
   align-items: center;
-  gap: 20px;
   justify-content: space-between;
   padding: 5px 0;
+  gap: 5px;
   padding-bottom: 10px;
   width: 1200px;
   margin: 0 auto;
